<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_choose_diver"
        android:title="@string/choose_diver"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_enter_diver"
        android:title="@string/enter_new_diver_info"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_edit_diver"
        android:title="@string/title_activity_diver_edit"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_delete_diver"
        android:title="@string/title_activity_diver_delete"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_enter_meet"
        android:title="@string/title_activity_enter_meet"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_edit_meet"
        android:title="@string/title_activity_meet_edit"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_delete_meet"
        android:title="@string/title_activity_meet_delete"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_remove_diver_from_meet"
        android:title="@string/remove_diver_from_meet"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

</menu>
