<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_failed_dive"
        android:title="@string/failed_dive"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_enter_dive_score"
        android:title="@string/add_dive_score"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_change_dive_score"
        android:title="@string/change_dive_score"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_how_to"
        android:title="@string/how_to_string"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

    <item android:id="@+id/menu_about"
        android:title="@string/about_string"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView" />

</menu>
